--- a/index.html
+++ b/index.html
@@ -84,41 +84,29 @@
     <section id="Acerca-de-mi" class="container text-center my-5">
       <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
-      <p class="my-4">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam
-        distinctio, odit laborum aliquam earum itaque cum sequi, dolorem optio
-        vol
-      </p>
-
       <div class="row">
         <div class="col-12 col-md-4">
           <i class="fas fa-camera fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Fotografiar la comida forma parte de la experiencia de comer, las
+            redes sociales de comida de todo tipo.
           </p>
         </div>
         <div class="col-12 col-md-4">
           <i class="fas fa-bullhorn fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Crítica culinaria</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Crítica gastronómica y la capacidad de discernir los sabores, las
+            texturas y los aromas de los platos.
           </p>
         </div>
         <div class="col-12 col-md-4">
           <i class="far fa-map fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Capaz de evaluar la calidad de la comida en términos de sabor,
+            presentación, técnica culinaria y creatividad.
           </p>
         </div>
       </div>
