section Mis-trabajos, cambios de textos.

--- a/index.html
+++ b/index.html
@@ -127,10 +127,9 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Explicabo iure sint, perspiciatis distinctio molestias nihil
-                repudiandae neque rem adipisci repellendus libero illo quo
-                blanditiis, velit quasi ad, recusandae voluptates officia.
+                El cordero y los frutos rojos son embajadores destacados de la
+                Patagonia, una región que brinda la posibilidad de observar y
+                disfrutar paisajes.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -147,10 +146,9 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                consequatur quos error fuga excepturi quo. Laudantium optio
-                pariatur laboriosam modi, ea molestias?
+                Las papas rusticas son muy fácil de preparar, solo se debe
+                considerar algunos pequeños secretos para conseguir ese
+                crujiente y rico sabor.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -167,10 +165,8 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Salmones de Alaska</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                corporis facilis qui architecto dolor, accusamus eveniet
-                exercitationem fugit. Quod autem neque ducimus.
+                El salmón salvaje de Alaska ayuda a cuidar el corazón y el cerebro, además, se captura de
+                manera sostenible y respetando el medioambiente.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
