section Contacto, agregué texto.

--- a/index.html
+++ b/index.html
@@ -165,8 +165,9 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Salmones de Alaska</h5>
               <p class="card-text">
-                El salmón salvaje de Alaska ayuda a cuidar el corazón y el cerebro, además, se captura de
-                manera sostenible y respetando el medioambiente.
+                El salmón salvaje de Alaska ayuda a cuidar el corazón y el
+                cerebro, además, se captura de manera sostenible y respetando el
+                medioambiente.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -181,10 +182,8 @@
       <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
       <p class="text-center my-4 d-none d-md-block">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
-        sapiente, autem delectus totam expedita animi corporis dolorem qui
-        magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate
-        beatae tempora quaerat?
+        Si tienes dudas o consultas rellena el formulario y nuestro equipo te
+        contactara a la brevedad.
       </p>
 
       <form>
