--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     </section>
 
     <footer class="bg-dark text-center text-light p-4">
-      <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+      <p class="mb-0">Síguenos en Instagram en <a href="https://www.instagram.com/locomidoylobailado_/" target="_blank" >@OliviaRos</a></p>
     </footer>
 
     <script
